--- a/org/_posts/2013-10/2013-10-22-Emacs-book.org
+++ b/org/_posts/2013-10/2013-10-22-Emacs-book.org
@@ -11,10 +11,9 @@ icon: compass
 featured: false
 ---
 #+END_HTML
-* Emacs杂记
-** 为什么选择Emacs
+* 为什么选择Emacs
 因为好奇开始学习和折腾Emacs，慢慢习惯，现在已经舍不得了，最然现在还只是个初学者，传说的神奇还没有深切体会，但会继续学下去的。
-** org-mode写jekyll代码高亮的问题
+* org-mode写jekyll代码高亮的问题
 为了使输出的代码高亮，在.emacs中设置(setq org-export-htmlize-output-type 'inline-css) ，对于htmlize，这个变量如果设为css,则需要
 下载一个css文件（比如 orgmode.org网站的css文件）才能着色，选择inline-css则依据emacs当前外观主题，下面为org-publish，添加defadvice，使得发布博客时使用whiteboard风格。
 
@@ -33,7 +32,39 @@ htmlize."
         (enable-theme theme))
       ))
 #+END_SRC
-*** 参考
+** 参考
 [[http://ar.newsmth.net/thread-8fac5033e0ec5a-1.html][org-mode 中引用代码片段时语法着色的问题]]
 
 [[http://fasheng.github.io/blog/2013-10-06-change-code-color-style-when-publish-org-mode-to-html.html][设置org-mode导出为html时的代码高亮风格]]
+* 安装和使用ecb
+ecb是emacs中的代码浏览工具，依赖cedet。之前写过一篇[安装cedet和ecb][/emacs/2013/10/19/Emacs-cedet-ecb/index.html]的文章，手动安装的cedet和ecb。
+
+[[http://alexott.blogspot.de/2012/06/ecb-fresh-emacscedet.html][这篇文章]] 作者对ecb做了些改动，我clone下来试用发现跟Emacs24.3.1内置的cedet兼容良好。省去了手动安装cedet的过程，而且感觉emacs启动也快了些。下面是安装过程：
+#+BEGIN_SRC sh
+cd ~/.emacs.d/plugins/
+git clone https://github.com/alexott/ecb/
+#+END_SRC
+init.el中关于ecb的配置
+#+BEGIN_SRC sh
+;;ecb
+(add-to-list 'load-path "~/.emacs.d/plugins/ecb")
+(require 'ecb)
+(setq stack-trace-on-error nil)
+;;鼠标支持：Emacs中执行“M-x ecb-customize-most-important”，找到“Ecb Primary Secondary Mouse Buttons”选项，将其设为“Primary: mouse-1, secondary: mouse-2”，并且>以“Save for Future Sessions”保存。
+;;自动启动ecb
+;; (setq ecb-auto-activate t)
+;;F7:打开ecb
+(global-set-key  [(f7)] 'ecb-activate)
+;;F8:关闭ecb
+(global-set-key  [(f8)] 'ecb-deactivate)
+;;关闭ecb启动窗口
+(setq ecb-tip-of-the-day nil)
+#+END_SRC
+* 使用问题
+** flet和labels的warning
+装完auto-compute，启动emacs总会出下面两条warning
+#+BEGIN_SRC sh
+`flet' is an obsolete macro (as of 24.3); use either `cl-flet' or `cl-letf'.
+`labels' is an obsolete macro (as of 24.3); use `cl-labels' instead.
+#+END_SRC
+[[http://ergoemacs.org/emacs/emacs_24_common_lisp_package_name_change.html][这里]] 有点介绍.
