--- a/org/_posts/2013-10/2013-10-22-Emacs-book.org
+++ b/org/_posts/2013-10/2013-10-22-Emacs-book.org
@@ -76,7 +76,7 @@ htmlize."
 
 [[http://fasheng.github.io/blog/2013-10-06-change-code-color-style-when-publish-org-mode-to-html.html][设置org-mode导出为html时的代码高亮风格]]
 * 安装和使用ecb
-ecb是emacs中的代码浏览工具，依赖cedet。之前写过一篇[安装cedet和ecb][/emacs/2013/10/19/Emacs-cedet-ecb/index.html]的文章，手动安装的cedet和ecb。
+ecb是emacs中的代码浏览工具，依赖cedet。之前写过一篇[[/emacs/2013/10/19/Emacs-cedet-ecb/index.html][安装cedet和ecb]]的文章，手动安装的cedet和ecb。
 
 [[http://alexott.blogspot.de/2012/06/ecb-fresh-emacscedet.html][这篇文章]] 作者对ecb做了些改动，我clone下来试用发现跟Emacs24.3.1内置的cedet兼容良好。省去了手动安装cedet的过程，而且感觉emacs启动也快了些。下面是安装过程：
 #+BEGIN_SRC sh
@@ -105,6 +105,9 @@ init.el中关于ecb的配置
 ;;关闭ecb启动窗口
 (setq ecb-tip-of-the-day nil)
 #+END_SRC
+** ecb布局
+[[http://blog.yxwang.me/2010/02/bind-cscope-to-ecb/][ecb和cscope的结合使用]] \\
+[[http://utkarshsengar.com/2011/06/emacs-python/][My emacs setup for python dev]] \\
 ** 参考资料
 关于内置cedet的配置这几篇介绍不错 \\
 http://stackoverflow.com/questions/8038114/emacs-24-builtin-cedet-function-highlight \\
@@ -114,6 +117,57 @@ http://emacser.com/built-in-cedet.htm
 cedet的详细说明 \\
 http://cxwangyi.wordpress.com/2010/08/21/using-cedet-with-emacs/ \\
 http://alexott.net/en/writings/emacs-devenv/EmacsCedet.html
+
+[[http://jinganglang777.blog.163.com/blog/static/790854972012127104446221/][让Emacs功能强于Source Insight]] \\
+[[http://www.wolinlabs.com/blog/emacs.global.speedbar.html][Code Browsing with Emacs, GLOBAL, and Speedbar]]
+* Emacs多窗口操作
+** 典型的工作流
+1. 在两个子窗口中对比文件内容
+2. 打开更多的窗口以参考其他信息.
+3. 对某个窗口内容比较有兴趣,跳转到该窗口,将该窗口最大化
+4. 看完最大化的窗口内容后,undo最大化操作,重新回到早先的多个小窗口模式以便继续纵览全局
+** 将子窗口自动编号,然后按M-0…9跳转(最爱)
+安装[[https://github.com/nschum/window-numbering.el][window-numbering.el]] ,然后在.emacs中添加以下代码,
+#+BEGIN_SRC 
+(require 'window-numbering)
+(window-numbering-mode 1)
+#+END_SRC
+** undo/redo之前的窗口操作
+使用winer-mode,默认C-c <left>和C-c <right>来对窗口布局实现undo/redo, .emacs中添加
+#+BEGIN_SRC 
+(winner-mode t)
+#+END_SRC
+** 光标移动到下一窗口(常用)
+M-x other-window,快捷键是`C-x o`.
+** 水平/垂直切分当前窗口(常用)
+快捷键C-x 2/3
+** 将当前子窗口最大化(常用)
+M-x delete-other-windows,快捷键`C-x 1`.
+** 删除当前子窗口(偶尔用)
+M-x delete-window,快捷键`C-x 0`.
+** 移动光标到上下左右的窗口(基本不用)
+因我较喜欢vi快捷键,所以我安装了Evil Mode.快捷键和Vi一样.C-w h/j/k/l移动至各方向的子窗口.
+** 存储/载入窗口布局到register(基本不用)
+`C-x r w <register>`存储,`C-x r j <register>`载入.
+*** 参考资料
+[[http://blog.csdn.net/redguardtoo/article/details/7768233][Emacs中的完美多窗口操作 ]]
+
+[[http://www.cnblogs.com/bamanzi/archive/2011/08/20/some-emacs-window-utils.html][Emacs窗口管理几个好东东]]
+* Python环境配置
+** 参考资料
+[[http://tkf.github.io/emacs-jedi/][主要参考1]] \\
+[[http://caisah.info/emacs-for-python/][主要参考2]] \\
+[[https://code.djangoproject.com/wiki/Emacs][django配置]] \\
+[[http://jack-kelly.com/setting_up_emacs_for_python_development][Setting up Emacs for Python development ]] \\
+* [[http://cnlox.is-programmer.com/posts/10354.html][GTD]]
+* Emacs配置参考
+[[http://www.cinsk.org/emacs/emacs-artist.html][Emacs画图Artist Mode]] \\
+[[http://lifegoo.pluskid.org/wiki/Emacs.html][星黎殿]] \\
+[[http://forum.ubuntu.org.cn/viewtopic.php?t=136768][emacs推广，配置详细介绍]] \\
+[[http://blog.csdn.net/jinzhuojun/article/details/1786451][程序员的emacs配置大全(cedet+ecb+cscope+gdb-ui)-jzj ]]
+
+
+
 * 使用问题
 ** flet和labels的warning
 装完auto-compute，启动emacs总会出下面两条warning
