--- a/org/_posts/2013-11/2013-11-2-openvswitch.org
+++ b/org/_posts/2013-11/2013-11-2-openvswitch.org
@@ -486,21 +486,8 @@ dl_type=0x86dd. ⇔ ipv6
 dl_type=0x86dd,nw_proto=6. ⇔ tcp6
 dl_type=0x86dd,nw_proto=17. ⇔ udp6
 dl_type=0x86dd,nw_proto=58. ⇔ icmp6
-
+* 常见问题
+** 运行ovs命令长时间无反应,但实际已执行
+原因是ovs-vswitchd进程未运行，而ovs命令会等待该进程的反馈，可以在运行命令时加--no-wait参数。
 * 参考资料
 [[http://www.yandong.org/archives/485][Open vSwitch使用笔记]]
-
-你重点看下网络的，还有nova的工作流程，这些都是面试官问我的 
-李世岗 10:27:59 
-nova的流程一定要清楚，因为现在的开发主要是集中在nova上，看E版本的nova就够了 
-gospring416 10:28:25 
-好 
-李世岗 10:29:21 
-http://os.51cto.com/art/201205/336386_2.htm 
-李世岗 10:29:37 
-这个就是E版的nova 
-gospring416 10:30:23 
-恩 
-李世岗 10:30:54 
-nova-api, glance-api,nova-compute, nova-network, nova-schedule，这几个组建的关系，调用顺序
-
