--- a/org/_posts/2013-12/2013-12-17-python-mysql.org
+++ b/org/_posts/2013-12/2013-12-17-python-mysql.org
@@ -212,4 +212,6 @@ con.close()
 [[http://www.crazyant.net/686.html][Python操作Mysql实例代码教程（查询手册）]] \\
 [[http://www.iteye.com/topic/573092][用Python操作Mysql]] \\
 [[http://www.cnblogs.com/rollenholt/archive/2012/05/29/2524327.html][python操作MySQL数据库]] \\
-[[http://m114.org/python-mysqldb-return-dict/][Python MySQLdb 查询返回字典结构]]
+[[http://m114.org/python-mysqldb-return-dict/][Python MySQLdb 查询返回字典结构]] \\
+[[http://docstore.mik.ua/orelly/weblinux2/mysql/ch10_01.htm][good book]] \\
+[[http://www.yiibai.com/python/python_mysql.html][易百]]
